--- a/src/main/idx-rospogeo-map.html
+++ b/src/main/idx-rospogeo-map.html
@@ -27,6 +27,9 @@
 
 </head>
 <body>
-    <map id="rospo" width="100" height="100"></map>
+    <map id="rospo" width="100" height="100">
+        <layers>
+        </layers>
+    </map>
 </body>
 </html>
