--- a/src/main/idx-rospogeo-map.html
+++ b/src/main/idx-rospogeo-map.html
@@ -14,6 +14,7 @@
     <script src="../vendors/openlayers/lib/OpenLayers.js" ></script>
     <!-- build:js rospogeo-map.js -->
     <script src="module.js" ></script>
+    <script src="template.js" ></script>
     <script src="directive/geo-directive-map.js" ></script>
     <script src="directive/geo-directive-layer.js" ></script>
     <!-- endbuild -->
@@ -29,6 +30,7 @@
 <body>
     <map id="rospo" width="100" height="100">
         <layers>
+            <layer></layer>
         </layers>
     </map>
 </body>
