validation for use attributes passed in tag layer

--- a/src/main/idx-rospogeo-map.html
+++ b/src/main/idx-rospogeo-map.html
@@ -30,7 +30,7 @@
 <body>
     <map id="rospo" width="100" height="100">
         <layers>
-            <layer></layer>
+            <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0"></layer>
         </layers>
     </map>
 </body>
