--- a/src/main/idx-rospogeo-map.html
+++ b/src/main/idx-rospogeo-map.html
@@ -9,8 +9,10 @@
 
     <script src="../vendors/angular/angular.min.js" ></script>
     <link rel="stylesheet" href="../vendors/openlayers/theme/default/style.css" type="text/css">
+    <link rel="stylesheet" href="../vendors/openlayers/theme/default/google.css" type="text/css">
     <link rel="stylesheet" href="../vendors/openlayers/examples/style.css" type="text/css">
 
+    <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
     <script src="../vendors/openlayers/lib/OpenLayers.js" ></script>
     <!-- build:js rospogeo-map.js -->
     <script src="module.js" ></script>
@@ -30,8 +32,22 @@
 <body>
     <map id="rospo" width="100" height="100">
         <layers>
-            <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0"></layer>
+            <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0" layers="basic" ></layer>
+            <layer type="WFS" name="OpenLayers WFS" url="http://v2.suite.opengeo.org/geoserver/ows" layers="usa:states" format="image/gif" ></layer>
+            <layer type="Google" ></layer>
         </layers>
     </map>
+    <p>Code to generate this map: </p>
+    <!--pre>
+        <code>
+            <map id="rospo" width="100" height="100">
+                <layers>
+                    <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0" layers="basic" ></layer>
+                    <layer type="WFS" name="OpenLayers WFS" url="http://v2.suite.opengeo.org/geoserver/ows" layers="usa:states" format="image/gif" ></layer>
+                    <layer type="Google" ></layer>
+                </layers>]]&gt;
+            </map>
+        </code>
+    </pre-->
 </body>
 </html>
