fix the first example code

--- a/src/main/idx-rospogeo-map.html
+++ b/src/main/idx-rospogeo-map.html
@@ -33,21 +33,21 @@
     <map id="rospo" width="100" height="100">
         <layers>
             <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0" layers="basic" ></layer>
-            <layer type="WFS" name="OpenLayers WFS" url="http://v2.suite.opengeo.org/geoserver/ows" layers="usa:states" format="image/gif" ></layer>
             <layer type="Google" ></layer>
         </layers>
     </map>
-    <p>Code to generate this map: </p>
-    <!--pre>
+    <br/>
+    <hr/>
+    <h1>Code to generate this map: </h1>
+    <pre>
         <code>
-            <map id="rospo" width="100" height="100">
-                <layers>
-                    <layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0" layers="basic" ></layer>
-                    <layer type="WFS" name="OpenLayers WFS" url="http://v2.suite.opengeo.org/geoserver/ows" layers="usa:states" format="image/gif" ></layer>
-                    <layer type="Google" ></layer>
-                </layers>]]&gt;
-            </map>
+            &lt;map id="rospo" width="100" height="100"&gt;
+                &lt;layers&gt;
+                    &lt;layer type="WMS" name="OpenLayers WMS" url="http://vmap0.tiles.osgeo.org/wms/vmap0" layers="basic" &gt;&lt;/layer&gt;
+                    &lt;layer type="Google" &gt;&lt;/layer&gt;
+                &lt;/layers&gt;
+            &lt;/map>
         </code>
-    </pre-->
+    </pre>
 </body>
 </html>
